# data-service

./: .gitignore  main.py  pyproject.toml
data/: pnl_statement.csv
scripts/: codegen.py
scripts/templates/: fetcher_template.jinja  query_template.jinja
src/: main.py
src/resources/: data_inventory.csv
src/resources/templates/: fetcher_template.jinja  query_template.jinja
src/scripts/: codegen.py
